Nearly done now - just need to enable looping and do some bug squashing and styling

--- a/clientapp/src/components/Story/StoryButton/StoryButton.module.css
+++ b/clientapp/src/components/Story/StoryButton/StoryButton.module.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;  
-    transition: transform .5s, color .3s, opacity 1.5s, box-shadow .5s;
+    transition: transform .5s, color .3s, opacity 1s, box-shadow .5s;
     flex-shrink: 1;
     flex-grow: 1;
     padding: 1rem 2rem;
